Changed button color for high-contrast to prevent it from blending with trash button

--- a/public/themes/high-contrast_color-scheme-dark.css
+++ b/public/themes/high-contrast_color-scheme-dark.css
@@ -13,8 +13,8 @@
   --focus-outline: 0 0 1px 2px rgba(243, 118, 118, 0.4);
   --highlight-color-bg: #000;
   --code-bg: #ccc;
-  --button-bg: #990000;
-  --button-border: 1px solid #bb0000;
+  --button-bg: #47549b;
+  --button-border: 1px solid #47448b;
   --button-danger-bg: #990000;
   --input-bg: #eee;
   --chat-input-bg: #000;
