--- a/public/themes/high-contrast_color-scheme-light.css
+++ b/public/themes/high-contrast_color-scheme-light.css
@@ -12,8 +12,8 @@
   --focus-outline: 0 0 1px 2px rgba(243, 118, 118, 0.4);
   --highlight-color-bg: #ffc4c4;
   --code-bg: #ccc;
-  --button-bg: #990000;
-  --button-border: 1px solid #bb0000;
+  --button-bg: #47549b;
+  --button-border: 1px solid #47448b;
   --button-danger-bg: #990000;
   --button-disabled-bg: #ffb3b3;
   --button-disabled-border: #373737;
